--- a/templates/distribution.erb
+++ b/templates/distribution.erb
@@ -20,7 +20,7 @@ Update: <%= @update %>
 <% if @not_automatic != "" -%>
 NotAutomatic: <%= @not_automatic %>
 <% if @not_automatic == "yes" && @but_automatic_upgrades != "" -%>
-ButAutomaticUpgrades: <%= @but_automatic_upgrades -%>
+ButAutomaticUpgrades: <%= @but_automatic_upgrades %>
 <% end -%>
 <% end -%>
 
