--- a/templates/update-distribution.sh.erb
+++ b/templates/update-distribution.sh.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 SNAPSHOTS=false
-BASEDIR="<%= basedir %>"
+BASEDIR="<%= @basedir %>"
 REPREPRO="/usr/bin/reprepro"
 
 usage () { echo "Usage: $0 -r <repository> -d <distribution> -c <codename> [-s]"; }
